update format file (W726)

--- a/formats/digital_native_minimalist_class_struggle_complete.html
+++ b/formats/digital_native_minimalist_class_struggle_complete.html
@@ -180,15 +180,11 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1"><strong>CHAPTER 1</strong></h2>
-<p>The last thing I own that my mother touched fits in the palm of my
-hand. It’s a river stone, grey and smooth, flat like a skipping stone.
-She plucked it from the bank of the Willamette twelve years ago, the
-summer before the sky turned the color of bad milk and stayed that way.
-She didn’t give it to me. She left it on the kitchen counter, still
-damp. I put it in my pocket. I’ve kept it since. It lives in the fifth
-slot of my GridCrate, between the multi-tool and the roll of
-biodegradable filament. It serves no purpose. It is my single point of
-frictionless, illogical weight.</p>
+<p>Her feed refreshed. Another notification, another curated life. Leo
+scrolled past yacht decks, sunrise yoga, avocado toast art. His own
+breakfast: nutrient paste, grey and efficient. The algorithm showed him
+everything he couldn’t afford, a silent, endless comparison. He tapped
+‘like’ on a villa in Bali. The paste tasted of chalk and distance.</p>
 <p>I am deleting everything else.</p>
 <p>“Asset log,” I say, my voice flat in the sterile air of the pod. The
 room is three meters by three. A cot, a sink, a toilet, a wall that is a
